tests/baselines/reference/constructorFunctionTypeIsAssignableToBaseType2.errors.txt
constructorFunctionTypeIsAssignableToBaseType2.ts(11,7): error TS2417: Class static side 'typeof Derived' incorrectly extends base class static side 'typeof Base'.
  The types of 'foo.bar' are incompatible between these types.
    Type 'number' is not assignable to type 'Object'.
constructorFunctionTypeIsAssignableToBaseType2.ts(18,15): error TS2345: Argument of type 'number' is not assignable to parameter of type 'Object'.
constructorFunctionTypeIsAssignableToBaseType2.ts(22,7): error TS2417: Class static side 'typeof Derived2' incorrectly extends base class static side 'typeof Base'.
  The types of 'foo.bar' are incompatible between these types.
    Type 'number' is not assignable to type 'Object'.
constructorFunctionTypeIsAssignableToBaseType2.ts(30,9): error TS2322: Type 'number' is not assignable to type 'Derived2'.
constructorFunctionTypeIsAssignableToBaseType2.ts(30,9): error TS2409: Return type of constructor signature must be assignable to the instance type of the class.


==== constructorFunctionTypeIsAssignableToBaseType2.ts (5 errors) ====
    // the constructor function itself does not need to be a subtype of the base type constructor function
    
    class Base {
        static foo: {
            bar: Object;
        }
        constructor(x: Object) {
        }
    }
    
    class Derived extends Base {
          ~~~~~~~
!!! error TS2417: Class static side 'typeof Derived' incorrectly extends base class static side 'typeof Base'.
!!! error TS2417:   The types of 'foo.bar' are incompatible between these types.
!!! error TS2417:     Type 'number' is not assignable to type 'Object'.
        // ok
        static foo: {
            bar: number;
        }
    
        constructor(x: number) {
            super(x);
                  ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'Object'.
        }
    }
    
    class Derived2 extends Base {   
          ~~~~~~~~
!!! error TS2417: Class static side 'typeof Derived2' incorrectly extends base class static side 'typeof Base'.
!!! error TS2417:   The types of 'foo.bar' are incompatible between these types.
!!! error TS2417:     Type 'number' is not assignable to type 'Object'.
        static foo: {
            bar: number;
        }
    
        // ok, not enforcing assignability relation on this
        constructor(x: any) {
            super(x);
            return 1;
            ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'Derived2'.
            ~~~~~~
!!! error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
        }
    }